--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "moment": "^2.30.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "@types/node": "^20.12.7",
+    "javascript": "^1.0.0",
+    "nodemon": "^3.1.0",
+    "prisma": "^5.12.1",
+    "ts-node": "^10.9.2"
   }
+ 
 }
