--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "pg": "^8.11.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
@@ -24,5 +25,4 @@
     "prisma": "^5.12.1",
     "ts-node": "^10.9.2"
   }
- 
 }
